# parallel-systems

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  addFish.sh  cudaUpdate.sh  hw1-mpi.cpp
CUDA/: CMakeLists.txt
MPI/: .clangd  CMakeLists.txt  hw1-mpi.cpp
